// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GalleryItem [GalleryItem - disabled: false] Component basic tests matches the snapshot 1`] = `
.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 500px;
  width: 100%;
  height: 100%;
}

.c0 {
  margin: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 200px;
  pointer-events: initial;
}

.c2 {
  background-color: rgba(0,0,0,0.05);
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c2::before {
  border: .25rem solid rgba(0,0,0,0.3);
  -webkit-animation: 4s infinite spin linear;
  animation: 4s infinite spin linear;
}

.c2::before,
.c2::after {
  content: '';
  position: absolute;
  width: 2rem;
  height: 2rem;
  border-right-color: transparent;
  border-left-color: transparent;
  border-radius: 50%;
}

@media only screen and (max-width:600px) {
  .c1 {
    min-width: 200px;
  }
}

@media only screen and (max-width:600px) {
  .c0 {
    height: 100px;
  }
}

<div
  className="c0"
  disabled={false}
>
  <div
    className="c1"
  >
    <div
      className="c2"
    />
  </div>
</div>
`;

exports[`GalleryItem [GalleryItem - disabled: true] Component basic tests matches the snapshot 1`] = `
.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 500px;
  width: 100%;
  height: 100%;
}

.c0 {
  margin: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 200px;
  pointer-events: none;
}

.c2 {
  background-color: rgba(0,0,0,0.05);
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c2::before {
  border: .25rem solid rgba(0,0,0,0.3);
  -webkit-animation: 4s infinite spin linear;
  animation: 4s infinite spin linear;
}

.c2::before,
.c2::after {
  content: '';
  position: absolute;
  width: 2rem;
  height: 2rem;
  border-right-color: transparent;
  border-left-color: transparent;
  border-radius: 50%;
}

@media only screen and (max-width:600px) {
  .c1 {
    min-width: 200px;
  }
}

@media only screen and (max-width:600px) {
  .c0 {
    height: 100px;
  }
}

<div
  className="c0"
  disabled={true}
>
  <div
    className="c1"
  >
    <div
      className="c2"
    />
  </div>
</div>
`;

exports[`GalleryItem [GalleryItem - imageIdx: 1] Component basic tests matches the snapshot 1`] = `
.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 500px;
  width: 100%;
  height: 100%;
}

.c0 {
  margin: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 200px;
  pointer-events: none;
}

.c2 {
  background-color: rgba(0,0,0,0.05);
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c2::before {
  border: .25rem solid rgba(0,0,0,0.3);
  -webkit-animation: 4s infinite spin linear;
  animation: 4s infinite spin linear;
}

.c2::before,
.c2::after {
  content: '';
  position: absolute;
  width: 2rem;
  height: 2rem;
  border-right-color: transparent;
  border-left-color: transparent;
  border-radius: 50%;
}

@media only screen and (max-width:600px) {
  .c1 {
    min-width: 200px;
  }
}

@media only screen and (max-width:600px) {
  .c0 {
    height: 100px;
  }
}

<div
  className="c0"
  disabled={true}
>
  <div
    className="c1"
  >
    <div
      className="c2"
    />
  </div>
</div>
`;
